midway to export images

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -22,7 +22,8 @@
 
   "ARCHIVE": {
     "TRACKS": "Trajectes",
-    "EXPORT_TRACK": "EXPORTAR TRAJECTE",
+    "EXPORT_TRACK": "COMPARTIR TRAJECTE",
+    "EXPORT_FILE": "EXPORTAR ARXIU",
     "DISPLAY_ALL": "MOSTRAR TOTS",
     "HIDE_ALL": "AMAGAR TOTS",
     "REMOVE_TRACKS": "ELIMINAR TRAJECTES",
