--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,6 +8,7 @@
     "UPLOAD_MAPS": "Cargar mapas",
     "REMOVE_MAPS": "Eliminar mapas",
     "SAVED_TRACK_ALTITUDE": "Altitud del trayecto guardado",
+    "ALERT": "Alerta",
     "AUDIO_ALERT": "Alerta sonora",
     "COLOR_LIST": ["carmesí", "rojo", "naranja", "dorado", "amarillo", "magenta", "morado", "lima", "verde", "cian", "azul"],
     "CURRENT_HEADER": "Trayecto actual",
