--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,7 +91,10 @@
     "NOTICE2": "... or select current location",
     "TOAST1": "No route found",
     "NETWORK_ERROR": "Network error",
-    "DESTINATION": "Destination"
+    "DESTINATION": "Destination",
+    "BUTTON": "Search",
+    "LOCATION": "Search place",
+    "ROUTE": "Search route"
   },
 
   "MAP": {
@@ -110,6 +113,21 @@
     "TRACK_FINISHED": "The current track has finished",
     "YES": "Yes",
     "TOIMAGE_FAILED": "Failed to generate image"
+  },
+
+    "RECORD": {
+    "START_TRACKING": "Start tracking",
+    "STOP_TRACKING": "Stop tracking",
+    "WAYPOINT": "Add waypoint",
+    "SAVE_TRACK": "Save track",
+    "REMOVE_TRACK": "Remove track",
+    "CONFIRM_STOP": "Confirm stop?",
+    "CONFIRM_DELETION": "Confirm deletion?",
+    "STOP_YES": "Yes, stop it",
+    "STOP_NO": "No, continue",
+    "DELETE_YES": "Yes, delete it",
+    "DELETE_NO": "No, continue",
+    "BUTTON": "Record"
   }
 
 }
