--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -94,7 +94,10 @@
     "DESTINATION": "Destino",
     "BUTTON": "Buscar",
     "LOCATION": "Lugar",
-    "ROUTE": "Ruta"
+    "ROUTE": "Ruta",
+    "INSTRUCTION": "¿Què busca?",
+    "SEARCH": "Buscar",
+    "LIST": "Lista"
   },
 
   "MAP": {
