location service implemented

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -125,7 +125,8 @@
     "ARCHIVE_BUTTON": "Arxiu",
     "SETTINGS_BUTTON": "Config.",
     "FROM": "From",
-    "TO": "To"
+    "TO": "To",
+    "CONFIRM_SHARING": "Segur que vols compartir la teva posició amb una altra persona?"
   },
 
   "RECORD": {
