working on archive

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -24,15 +24,14 @@
 
   "ARCHIVE": {
     "TRACKS": "Trajectes",
-    "EXPORT_TRACK": "COMPARTIR TRAJECTE",
-    "EXPORT_FILE": "EXPORTAR ARXIU",
     "DISPLAY_ALL": "MOSTRAR TOTS",
     "HIDE_ALL": "AMAGAR TOTS",
-    "REMOVE_TRACKS": "ELIMINAR TRAJECTES",
-    "EDIT_TRACK": "EDITAR TRAJECTE",
-    "HIDE_REFERENCE": "AMAGAR REFERÈNCIA",
-    "SHOW_REFERENCE": "MOSTRAR REFERÈNCIA",
+    "REMOVE_TRACK": "ELIMINAR",
+    "EDIT_TRACK": "EDITAR",
+    "HIDE_REFERENCE": "AMAGAR",
+    "SHOW_REFERENCE": "MOSTRAR",
     "REMOVE_SEARCH": "ESBORRAR CERCA",
+    "EXPORT_TRACK": "EXPORTAR",
     "CANCEL": "Cancel·lar",
     "HEADER": "Confirma l'esborrat",
     "MESSAGE": "S'esborraran definitivament els trajectes marcats",
@@ -121,6 +120,7 @@
     "TRACK_FINISHED": "El trajecte actual ha finalitzat",
     "YES": "Sí",
     "TOIMAGE_FAILED": "No s'ha pogut generar la imatge",
+    "MAP_BUTTON": "Mapa",
     "DATA_BUTTON": "Dades",
     "ARCHIVE_BUTTON": "Arxiu",
     "SETTINGS_BUTTON": "Config.",
