--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,15 +23,14 @@
 
   "ARCHIVE": {
     "TRACKS": "Tracks",
-    "EXPORT_TRACK": "SHARE TRACK",
-    "EXPORT_FILE": "EXPORT FILE",
     "DISPLAY_ALL": "DISPLAY ALL",
     "HIDE_ALL": "HIDE ALL",
-    "REMOVE_TRACKS": "REMOVE TRACKS",
-    "EDIT_TRACK": "EDIT TRACK",
-    "HIDE_REFERENCE": "HIDE REFERENCE",
-    "SHOW_REFERENCE": "SHOW REFERENCE",
+    "REMOVE_TRACK": "REMOVE",
+    "EDIT_TRACK": "EDIT",
+    "HIDE_REFERENCE": "HIDE",
+    "SHOW_REFERENCE": "SHOW",
     "REMOVE_SEARCH": "REMOVE SEARCH",
+    "EXPORT_TRACK": "EXPORT",
     "CANCEL": "Cancel",
     "HEADER": "Confirm deletion",
     "MESSAGE": "The selected tracks will be permanently deleted",
@@ -123,6 +122,7 @@
     "TRACK_FINISHED": "The current track has finished",
     "YES": "Yes",
     "TOIMAGE_FAILED": "Failed to generate image",
+    "MAP_BUTTON": "Mapa",
     "DATA_BUTTON": "Data",
     "ARCHIVE_BUTTON": "Archive",
     "SETTINGS_BUTTON": "Settings",
