--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -23,15 +23,14 @@
 
   "ARCHIVE": {
     "TRACKS": "Trayectos",
-    "EXPORT_TRACK": "COMPARTIR TRAYECTO",
-    "EXPORT_FILE": "EXPORTAR ARCHIVO",
     "DISPLAY_ALL": "MOSTRAR TODOS",
     "HIDE_ALL": "ESCONDER TODOS",
-    "REMOVE_TRACKS": "ELIMINAR TRAYECTOS",
-    "EDIT_TRACK": "EDITAR TRAYECTO",
-    "HIDE_REFERENCE": "ESCONDER REFERENCIA",
-    "SHOW_REFERENCE": "MOSTRAR REFERENCIA",
+    "REMOVE_TRACK": "ELIMINAR",
+    "EDIT_TRACK": "EDITAR",
+    "HIDE_REFERENCE": "ESCONDER",
+    "SHOW_REFERENCE": "MOSTRAR",
     "REMOVE_SEARCH": "ELIMINAR BÚSQUEDA",
+    "EXPORT_TRACK": "EXPORTAR",
     "CANCEL": "Cancelar",
     "HEADER": "Confirma el borrado",
     "MESSAGE": "Se borrarán definitivamente los trayectos marcados",
@@ -123,6 +122,7 @@
     "TRACK_FINISHED": "El trayecto actual ha finalizado",
     "YES": "Sí",
     "TOIMAGE_FAILED": "No se ha podido generar la imagen",
+    "MAP_BUTTON": "Map",
     "DATA_BUTTON": "Datos",
     "ARCHIVE_BUTTON": "Archivo",
     "SETTINGS_BUTTON": "Config.",
