--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -9,7 +9,6 @@
     "REMOVE_MAPS": "Eliminar mapes",
     "SAVED_TRACK_ALTITUDE": "Altitud del trajecte guardat",
     "ALERT": "Alerta",
-    "AUDIO_ALERT": "Alerta sonora",
     "COLOR_LIST": ["carmesí", "vermell", "taronja", "daurat", "groc", "magenta", "morat", "llima", "verd", "cian", "blau"],
     "COLORS2": ["carmesí", "vermell", "taronja", "daurat", "groc", "magenta", "morat", "llima", "verd", "cian", "blau"],
     "CURRENT_HEADER": "Trajecte actual",
@@ -24,14 +23,13 @@
 
   "ARCHIVE": {
     "TRACKS": "Trajectes",
-    "DISPLAY_ALL": "MOSTRAR TOTS",
-    "HIDE_ALL": "AMAGAR TOTS",
-    "REMOVE_TRACK": "ELIMINAR",
-    "EDIT_TRACK": "EDITAR",
-    "HIDE_REFERENCE": "AMAGAR",
-    "SHOW_REFERENCE": "MOSTRAR",
-    "REMOVE_SEARCH": "ESBORRAR CERCA",
-    "EXPORT_TRACK": "EXPORTAR",
+    "SHOW": "Mostrar",
+    "HIDE": "Amagar",
+    "ALL": "tots",
+    "REMOVE_TRACK": "Eliminar",
+    "EDIT_TRACK": "Editar",
+    "EXPORT_TRACK": "Exportar",
+
     "CANCEL": "Cancel·lar",
     "HEADER": "Confirma l'esborrat",
     "MESSAGE": "S'esborraran definitivament els trajectes marcats",
