--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,6 @@
     "REMOVE_MAPS": "Remove maps",
     "SAVED_TRACK_ALTITUDE": "Saved track altitude",
     "ALERT": "Alert",
-    "AUDIO_ALERT": "Audio alert",
     "COLOR_LIST": ["crimson", "red", "orange", "gold", "yellow", "magenta", "purple", "lime", "green", "cyan", "blue"],
     "CURRENT_HEADER": "Current track",
     "ARCHIVED_HEADER": "Reference track",
@@ -23,14 +22,13 @@
 
   "ARCHIVE": {
     "TRACKS": "Tracks",
-    "DISPLAY_ALL": "DISPLAY ALL",
-    "HIDE_ALL": "HIDE ALL",
-    "REMOVE_TRACK": "REMOVE",
-    "EDIT_TRACK": "EDIT",
-    "HIDE_REFERENCE": "HIDE",
-    "SHOW_REFERENCE": "SHOW",
-    "REMOVE_SEARCH": "REMOVE SEARCH",
-    "EXPORT_TRACK": "EXPORT",
+    "SHOW": "Show",
+    "HIDE": "Hide",
+    "ALL": "all",
+    "REMOVE_TRACK": "Remove",
+    "EDIT_TRACK": "Edit",
+    "EXPORT_TRACK": "Export",
+
     "CANCEL": "Cancel",
     "HEADER": "Confirm deletion",
     "MESSAGE": "The selected tracks will be permanently deleted",
