--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,6 @@
     "REMOVE_MAPS": "Eliminar mapas",
     "SAVED_TRACK_ALTITUDE": "Altitud del trayecto guardado",
     "ALERT": "Alerta",
-    "AUDIO_ALERT": "Alerta sonora",
     "COLOR_LIST": ["carmesí", "rojo", "naranja", "dorado", "amarillo", "magenta", "morado", "lima", "verde", "cian", "azul"],
     "CURRENT_HEADER": "Trayecto actual",
     "ARCHIVED_HEADER": "Trayecto de referencia",
@@ -23,14 +22,13 @@
 
   "ARCHIVE": {
     "TRACKS": "Trayectos",
-    "DISPLAY_ALL": "MOSTRAR TODOS",
-    "HIDE_ALL": "ESCONDER TODOS",
-    "REMOVE_TRACK": "ELIMINAR",
-    "EDIT_TRACK": "EDITAR",
-    "HIDE_REFERENCE": "ESCONDER",
-    "SHOW_REFERENCE": "MOSTRAR",
-    "REMOVE_SEARCH": "ELIMINAR BÚSQUEDA",
-    "EXPORT_TRACK": "EXPORTAR",
+    "SHOW": "Mostrar",
+    "HIDE": "Esconder",
+    "ALL": "todos",
+    "REMOVE_TRACK": "Eliminar",
+    "EDIT_TRACK": "Editar",
+    "EXPORT_TRACK": "Exportar",
+
     "CANCEL": "Cancelar",
     "HEADER": "Confirma el borrado",
     "MESSAGE": "Se borrarán definitivamente los trayectos marcados",
